# renamer

./: Cargo.toml  SECURITY.md
.github/: CONTRIBUTING.md
.github/workflows/: rust_test.yml
src/: main.rs
