[package]
name = "renamer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
console = "0.15.7"
dialoguer = { version = "0.10.4", features = ["fuzzy-matcher", "completion"] }
glob = "0.3.1"
prettytable-rs = { version = "0.10.0", default-features = false }
regex = "1.8.4"
